[project]
name = "mh0386.backend.io"
version = "0.1.0"
description = "Backend Part of my website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.4.0",
    "click>=8.1.7",
    "fastapi>=0.112.2",
    "h11>=0.14.0",
    "idna>=3.8",
    "pydantic-core>=2.20.1",
    "pydantic>=2.8.2",
    "sniffio>=1.3.1",
    "starlette>=0.38.2",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.30.6",
]
